tests/paczka1/fuzzy1/22615692.err
Error in line 1: PNjqfb S728 z9,7
Error in line 4: rKlRXE1rM2 S728 26,4
Error in line 10: PNjqfb S728 223,9
Error in line 24: PNjqfb S58{ 56,8
Error in line 31: y2j S580 38,4
